# orcheo

./: .bumpversion.cfg  .env.auth  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Dockerfile.backend  GEMINI.md  Makefile  README.md  docker-compose.yml  log  mkdocs.yml  pyproject.toml
apps/backend/: .bumpversion.cfg  README.md  pyproject.toml
apps/backend/src/orcheo_backend/: __init__.py
apps/backend/src/orcheo_backend/app/: __init__.py  _core_exports.py  _router_exports.py  authentication.py  chatkit_asset_proxy.py  chatkit_runtime.py  chatkit_server.py  chatkit_service.py  chatkit_store.py  chatkit_store_sqlite.py  credential_readiness.py  credential_utils.py  dependencies.py  external_agent_auth.py  external_agent_runtime_store.py  factory.py  history.py  history_utils.py  listener_runtime.py  listener_runtime_service.py  logging_config.py  plugin_inventory.py  providers.py  repository.py  repository_sqlite.py  schemas.py  service_token_endpoints.py  service_token_repository.py  templates.py  trace_utils.py  tracing.py  versioning.py  workflow_execution.py
apps/backend/src/orcheo_backend/app/agentensor/: checkpoint_store.py
apps/backend/src/orcheo_backend/app/authentication/: __init__.py  authenticator.py  dependencies.py  jwt_helpers.py  settings.py
apps/backend/src/orcheo_backend/app/chatkit/: message_utils.py  messages.py  model_selection.py  server.py  workflow_executor.py
apps/backend/src/orcheo_backend/app/chatkit_store_postgres/: items.py  threads.py
apps/backend/src/orcheo_backend/app/history/: in_memory.py  models.py  postgres_store.py  serialization.py  sqlite_store.py  sqlite_utils.py
apps/backend/src/orcheo_backend/app/repository/: __init__.py  chatkit.py  errors.py  protocol.py
apps/backend/src/orcheo_backend/app/repository/in_memory/: __init__.py  listeners.py  runs.py  state.py  versions.py  workflows.py
apps/backend/src/orcheo_backend/app/repository_postgres/: __init__.py  _base.py  _listeners.py  _persistence.py  _runs.py  _triggers.py  _versions.py  _workflows.py
apps/backend/src/orcheo_backend/app/repository_sqlite/: __init__.py  _base.py  _listeners.py  _persistence.py  _runs.py  _triggers.py  _versions.py  _workflows.py
apps/backend/src/orcheo_backend/app/routers/: __init__.py  agentensor.py  chatkit.py  credential_alerts.py  credential_health.py  credential_templates.py  credentials.py  listeners.py  nodes.py  runs.py  system.py  triggers.py  websocket.py  workflows.py
apps/backend/src/orcheo_backend/app/schemas/: __init__.py  chatkit.py  credentials.py  listeners.py  nodes.py  runs.py  system.py  traces.py  workflows.py
apps/backend/src/orcheo_backend/app/service_token_repository/: sqlite_repository.py
apps/backend/src/orcheo_backend/app/traces/: serializers.py
apps/backend/src/orcheo_backend/worker/: celery_app.py  external_agents.py  tasks.py
docs/: 404.md  auth0_idp_setup.md  authentication_design.md  authentication_guide.md  beta_launch_plan.md  canvas.md  chatkit_integration_design.md  cli_reference.md  cli_tool_design.md  connect_coding_agent.md  conversational_search_examples.md  credential_templates.md  custom_nodes_and_tools.md  deployment.md  design.md  developer_guide.md  developer_tooling.md  environment_variables.md  external_agent_nodes.md  frontend_plan.md  index.md  manual_setup.md  mcp_integration.md  milestone1_task1.md  milestone3_security_review.md  node_catalog.md  observability.md  onboarding_playbook.md  plugin_tutorial.md  prd.md  prd_claude.md  prd_codex.md  refactoring_plan.md  releasing.md  requirements.txt  roadmap.md  sdk_reference.md  security_review.md
examples/: agent_example.ipynb  agent_example.py  agent_node_langgraph.py  chatkit-embed.html  chatkit-embedding.html  chatkit-orcheo.html  chatkit_langgraph.py  mongodb.py  (+18 more)
tests/plugin_fixtures/broken_plugin/: pyproject.toml
tests/plugin_fixtures/broken_plugin/src/orcheo_plugin_fixture_broken/: __init__.py
tests/plugin_fixtures/edge_plugin/: pyproject.toml
tests/plugin_fixtures/edge_plugin/src/orcheo_plugin_fixture_edge/: __init__.py  orcheo_plugin.toml
tests/plugin_fixtures/incompatible_plugin/: pyproject.toml
tests/plugin_fixtures/incompatible_plugin/src/orcheo_plugin_fixture_incompatible/: __init__.py  orcheo_plugin.toml
tests/plugin_fixtures/listener_plugin/: pyproject.toml
tests/plugin_fixtures/listener_plugin/src/orcheo_plugin_fixture_listener/: __init__.py  orcheo_plugin.toml
tests/plugin_fixtures/node_plugin/: pyproject.toml
tests/plugin_fixtures/node_plugin/src/orcheo_plugin_fixture_node/: __init__.py  orcheo_plugin.toml
tests/plugin_fixtures/partial_register_plugin/: pyproject.toml
tests/plugin_fixtures/partial_register_plugin/src/orcheo_plugin_fixture_partial_register/: __init__.py  orcheo_plugin.toml
(+1199 files in other folders)
